--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Karla:wght@300;400&display=swap" rel="stylesheet">
   </head>
-  <body data-hi>
+  <body>
 
     <header class="b-header">
       <a class="b-logo" href='./'>brendan rice</a>
@@ -18,7 +18,6 @@
         Mount Pleasant <span class="b-tree" data-emoji="🌴"></span>
       </div>
     </header>
-
 
     <div class="b-grid">
       <div class="b-grid__inner">
